# tbkp

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
cluster/: bb_generate_scripts.rb  dp_generate_scripts.rb  generate_scripts.rb
data/: example.txt  instance_generator.rb
data/generated-instances/: c-100-0-0.05-1.txt  c-100-0-0.05-15.txt  c-100-0-0.05-16.txt  c-100-0-0.05-19.txt  c-100-0-0.05-2.txt  c-100-0-0.05-20.txt  c-100-0-0.05-21.txt  c-100-0-0.05-22.txt  c-100-0-0.05-3.txt  c-100-0-0.05-4.txt  c-100-0-0.05-5.txt  c-100-0-0.05-6.txt  c-100-0-0.05-7.txt  c-100-0-0.05-8.txt  c-100-0-0.05-9.txt  c-100-0-0.1-12.txt  c-100-0-0.1-15.txt  c-100-0-0.1-16.txt  c-100-0-0.1-17.txt  c-100-0-0.1-18.txt  c-100-0-0.1-19.txt  c-100-0-0.1-2.txt  c-100-0-0.1-20.txt  c-100-0-0.1-21.txt  c-100-0-0.1-22.txt  c-100-0-0.1-24.txt  c-100-0-0.1-4.txt  c-100-0-0.1-5.txt  c-100-0-0.1-6.txt  c-100-0-0.1-7.txt  c-100-0-0.1-8.txt  c-100-0-0.1-9.txt  c-100-0-0.2-15.txt  c-100-0-0.2-16.txt  c-100-0-0.2-19.txt  c-100-0-0.2-24.txt  c-100-0-0.2-3.txt  c-100-0-0.2-4.txt  c-100-0-0.2-5.txt  c-100-0-0.2-6.txt  (+2658 more)
src/: main.c  tbkp_BaB.c  tbkp_BaB.h  tbkp_bb.c  tbkp_bb.h  tbkp_bb_defs.h  tbkp_bb_fixed_status.h  tbkp_bb_params.h  tbkp_bb_solution.c  tbkp_bb_solution.h  tbkp_bb_stats.c  tbkp_bb_stats.h  tbkp_boole_sol.c  tbkp_boole_sol.h  tbkp_cr_sol.c  tbkp_cr_sol.h  tbkp_de_sol.c  tbkp_de_sol.h  tbkp_dp.c  tbkp_dp.h  tbkp_dp_stats.c  tbkp_dp_stats.h  tbkp_instance.c  tbkp_instance.h  tbkp_params.h  tbkp_solution.c  tbkp_solution.h  tbkp_ub.c  tbkp_ub.h
src/utils/: combo.c  combo.h  pdqsort_c.cpp  pdqsort_c.h
